# fx-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/instructions/: refactor.md.instructions.md
.github/workflows/: cargo-publish.yaml  cargo-test.yaml  gh-pages.yml  nix-fmt.yaml  tangled.yaml
.tangled/workflows/: mirror.yml
book/: .gitignore  book.toml
book/src/: SUMMARY.md  abort.md  basics.md  concepts.md  concurrency.md  contributing.md  core.md  di_typeclasses.md  direct_style.md  environments.md  future_work.md  handler_composition.md  handlers.md  http.md  introduction.md  macros.md  performance.md  polymorphism.md  req_apply.md  req_context.md  req_providers.md  req_shuffling.md  requests.md  requirements.md  resources.md  rw.md  state_lenses.md  testing.md  uniqueness.md
book/src/requirements/: apply.md  context.md  providers.md  shuffling.md
book/theme/: index.hbs
crates/abilities_macro/: Cargo.toml
crates/abilities_macro/src/: lib.rs
crates/builder_macro/: Cargo.toml
crates/builder_macro/src/: lib.rs
crates/builder_types/: Cargo.toml
crates/builder_types/src/: lib.rs
crates/do_macro/: Cargo.toml
crates/do_macro/src/: lib.rs
crates/do_macro/tests/: basic.rs
crates/do_traits/: Cargo.toml
crates/do_traits/src/: lib.rs
crates/field_macro/: Cargo.toml
crates/field_macro/src/: lib.rs
crates/field_macro/tests/: struct_field.rs
crates/forall_macro/: Cargo.toml
crates/forall_macro/src/: lib.rs
crates/forall_macro/tests/: forall_fields.rs
crates/fx/src/: lib.rs  prelude.rs
crates/fx/src/core/: ability.rs  acc.rs  and.rs  arrow.rs  field.rs  forall.rs  fx.rs  get_n.rs  handler.rs  has_put.rs  lens.rs  lens_test.rs  mod.rs  pair.rs  provide.rs  put.rs  put_test.rs  quant.rs  state.rs  test.rs
crates/fx/src/core/tests/: ability_test.rs  acc_test.rs  and_test.rs  arrow_test.rs  forall_test.rs  fx_test.rs  get_n_test.rs  handler_test.rs  has_put_test.rs  lens_test.rs  mod.rs  pair_test.rs  provide_test.rs  put_test.rs  quant_test.rs  quantified_laws.rs  state_test.rs  test.rs
crates/fx/src/kernel/: ability.rs  fx.rs  mod.rs  test.rs
crates/fx/src/stream/: mod.rs  stream.rs  test.rs
crates/fx/tests/: ability_modify_and_continue.rs  fx_adapt.rs  fx_chain.rs  fx_contra_map.rs  fx_func.rs  fx_provide.rs  fx_value.rs  kernel_adapt_contramap.rs  kernel_eval_immediate.rs  kernel_eval_pending.rs  lens_from_has_put_get_set.rs  put_field_in_struct.rs  put_identity_for_leaf.rs  quantified_laws.rs  state.rs  state_ctx.rs
crates/integration/: Cargo.toml
crates/integration/tests/: abilities_macro_test.rs  builder_macro_test.rs  field_macro_test.rs  lens_macro_test.rs
crates/lens_macro/src/: lib.rs
fx/: Cargo.toml
fx/src/core/: ability.rs  acc.rs  fx.rs  provide.rs
fx/src/kernel/: test.rs
fx/src/stream/: mod.rs
integration/: Cargo.toml
integration/src/: main.rs
integration/tests/: lens_macro_test.rs
lens_macros/: Cargo.toml
lens_macros/src/: lib.rs
nix/: default.nix  devshell.nix  rust.nix  treefmt.nix
src/: lib.rs
src/ability/: ability.rs  handler.rs  mod.rs
src/base/: ability.rs  and.rs  cap.rs  fx.rs  handle.rs  handler.rs  map.rs  mod.rs  provide.rs  reqfx.rs  test.rs
src/core/: ability.rs  and.rs  arrow.rs  eff.rs  fold.rs  fx.rs  handler.rs  lens.rs  map.rs  mod.rs  prod.rs  provide.rs  state.rs  test.rs
src/kernel/: ability.rs  comb.rs  eff.rs  fx.rs  mod.rs  provide.rs  test.rs
src/rw/: mod.rs  read.rs  test.rs  write.rs
src/state/: mod.rs  state.rs  test.rs
src/stream/: mod.rs  stream.rs  test.rs
