[workspace]
members = [
    "fx",
    "integration",
    "lens_macros"
]

[workspace.package]
keywords = ["functional", "algebraic", "effects"]
license = "Apache-2.0"
authors = ["Victor Borja <vborja@apache.org>"]
repository = "https://github.com/vic/fx-rs"
homepage = "https://vic.github.io/fx-rs"
version = "0.0.0-git"
edition = "2024"