[workspace]
resolver = "3"

members = [
    "crates/fx",
    "crates/integration",
    "crates/lens_macro",
    "crates/do_macro",
    "crates/field_macro",
    "crates/forall_macro",
    "crates/abilities_macro",
    "crates/builder_macro"
]

[workspace.package]
keywords = ["functional", "algebraic", "effects"]
license = "Apache-2.0"
authors = ["Victor Borja <vborja@apache.org>"]
repository = "https://github.com/vic/fx-rs"
homepage = "https://vic.github.io/fx-rs"
version = "0.0.0-git"
edition = "2024"
