[package]
name = "abilities_macro"
description = "Procedural macro to derive abilities traits and enums for fx."
keywords.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
proc-macro-error = "1"
fx = { path = "../fx" }
