[package]
name = "fx-field"
description = "Type directed field access macro for structs"
keywords.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = "1"
fx = { path = "../fx" }
