[package]
name = "integration"
keywords.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
fx = { path = "../fx" }
fx-lens = { path = "../lens_macro" }
fx-do = { path = "../do_macro" }
fx-field = { path = "../field_macro" }
abilities_macro = { path = "../abilities_macro" }
dyn-clone = "1.0.19"
builder_macro = { path = "../builder_macro" }
builder_types = { path = "../builder_types" }
